--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "src",
     "테스트용/시험.js",
     "임시파일들/Tv.tsx",
-    "src/Components/Styles"
+    "src/Components/Styles",
+    "임시보관/bigTv.tsx"
   ]
 }
